--- a/Windyship/Windyship.Dal.csproj
+++ b/Windyship/Windyship.Dal.csproj
@@ -50,6 +50,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\Content.cs" />
+    <Compile Include="Entities\ContentPart.cs" />
+    <Compile Include="Entities\Language.cs" />
+    <Compile Include="Migrations\201604021634073_InitialCreate.cs" />
+    <Compile Include="Migrations\201604021634073_InitialCreate.Designer.cs">
+      <DependentUpon>201604021634073_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201604031302196_Content.cs" />
+    <Compile Include="Migrations\201604031302196_Content.Designer.cs">
+      <DependentUpon>201604031302196_Content.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Repositories\ContentRepository.cs" />
+    <Compile Include="Repositories\IContentRepository.cs" />
     <Compile Include="WindyContext.cs" />
     <Compile Include="Core\DataContext.cs" />
     <Compile Include="Core\IDataContext.cs" />
@@ -73,6 +87,14 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201604021634073_InitialCreate.resx">
+      <DependentUpon>201604021634073_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201604031302196_Content.resx">
+      <DependentUpon>201604031302196_Content.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
