--- a/Windyship/Windyship.Dal.csproj
+++ b/Windyship/Windyship.Dal.csproj
@@ -75,9 +75,10 @@
     <Compile Include="Repositories\CategoryRepository.cs" />
     <Compile Include="Repositories\ContentRepository.cs" />
     <Compile Include="Repositories\FaqRepository.cs" />
+    <Compile Include="Repositories\ICategoryRepository.cs" />
     <Compile Include="Repositories\IDisabledCategoriesRepository.cs" />
-    <Compile Include="Repositories\ICategorieRepository.cs" />
     <Compile Include="Repositories\IContentRepository.cs" />
+    <Compile Include="Repositories\ICarryTravelRepository.cs" />
     <Compile Include="Repositories\IFaqRepository.cs" />
     <Compile Include="Repositories\ITravelToRepository.cs" />
     <Compile Include="Repositories\ITravelFromepository.cs" />
@@ -86,6 +87,8 @@
     <Compile Include="Repositories\IShipmentRepository.cs" />
     <Compile Include="Repositories\IUserRequestRepository.cs" />
     <Compile Include="Repositories\DisabledCategoriesRepository.cs" />
+    <Compile Include="Repositories\ShipmentRepository - Copy.cs" />
+    <Compile Include="Repositories\TravelToRepository.cs" />
     <Compile Include="Repositories\TravelFromRepository.cs" />
     <Compile Include="Repositories\LocationFromRepository.cs" />
     <Compile Include="Repositories\LocationToRepository.cs" />
