--- a/Windyship.Api/Windyship.Api.csproj
+++ b/Windyship.Api/Windyship.Api.csproj
@@ -205,6 +205,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Model\Account\AddTokenRequest.cs" />
     <Compile Include="Model\Account\ConfirmPhoneRequest.cs" />
     <Compile Include="Model\Account\CreateAccountRequest.cs" />
     <Compile Include="Model\Account\LoginRequest.cs" />
@@ -218,12 +219,16 @@
     <Compile Include="Model\Shipments\CarriersForShipmentReqiest.cs" />
     <Compile Include="Model\Shipments\CarrierViewModel.cs" />
     <Compile Include="Model\Shipments\CarryTravelViewModel.cs" />
+    <Compile Include="Model\Shipments\DeactivateTravelsRequest.cs" />
     <Compile Include="Model\Shipments\DeleteTravelRequest.cs" />
     <Compile Include="Model\Shipments\DeleteShipmentRequest.cs" />
     <Compile Include="Model\Shipments\DeliveredToCarrierRequest.cs" />
     <Compile Include="Model\Shipments\DeliveredToRecipientRequest.cs" />
+    <Compile Include="Model\Shipments\GetUserRequest.cs" />
+    <Compile Include="Model\Shipments\GetShipmentsRequest.cs" />
     <Compile Include="Model\Shipments\GetMyShipmentsRequest.cs" />
     <Compile Include="Model\Shipments\HireCarrierRequest.cs" />
+    <Compile Include="Model\Shipments\InterestRequest.cs" />
     <Compile Include="Model\Shipments\SetReviewRequest.cs" />
     <Compile Include="Model\Shipments\ShipmentRequest.cs" />
     <Compile Include="Model\Shipments\ShipmentViewModel.cs" />
@@ -240,6 +245,7 @@
     <Compile Include="Model\UserModels\Social\SocialTokenRequest.cs" />
     <Compile Include="Model\UserModels\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\AndroidGCMPushNotification.cs" />
     <Compile Include="Services\ConfigSvc\ConfigSectionName.cs" />
     <Compile Include="Services\ConfigSvc\ConfigService.cs" />
     <Compile Include="Services\IConfigService.cs" />
@@ -258,6 +264,7 @@
     <Compile Include="Services\IdentitySvc\Social\ISocialManager.cs" />
     <Compile Include="Services\IdentitySvc\Social\SocialUrls.cs" />
     <Compile Include="Services\IdentitySvc\TokenGenerator.cs" />
+    <Compile Include="Services\NotificationService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
