--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,45 @@ Windyship.Api/obj/Release/Windyship.Api.dll
 Windyship.Api/obj/Release/Windyship.Api.dll
 Windyship.Api/obj/Release/Windyship.Api.dll
 Windyship.Api/obj/Release/Windyship.Api.pdb
+OauthTest/bin/Release/Newtonsoft.Json.dll
+OauthTest/bin/Release/OauthTest.exe
+OauthTest/bin/Release/OauthTest.exe.config
+OauthTest/bin/Release/OauthTest.pdb
+OauthTest/obj/Release/OauthTest.csproj.FileListAbsolute.txt
+OauthTest/obj/Release/OauthTest.csprojResolveAssemblyReference.cache
+OauthTest/obj/Release/OauthTest.exe
+OauthTest/obj/Release/OauthTest.pdb
+Windyship.Api/obj/Release/DesignTimeResolveAssemblyReferencesInput.cache
+Windyship.Api/obj/Release/Package/PackageTmp/App_Data/aps_development.cer
+Windyship.Api/obj/Release/Package/PackageTmp/bin/MoonAPNS.dll
+Windyship.Api/obj/Release/Package/PackageTmp/bin/NLog.config
+Windyship.Api/obj/Release/Package/PackageTmp/bin/NLog.dll
+Windyship.Api/obj/Release/Package/PackageTmp/bin/Windyship.Api.dll
+Windyship.Api/obj/Release/Package/PackageTmp/bin/Windyship.dll
+Windyship.Api/obj/Release/Windyship.Api.csproj.FileListAbsolute.txt
+Windyship.Api/obj/Release/Windyship.Api.csprojResolveAssemblyReference.cache
+Windyship.Api/obj/Release/Windyship.Api.dll
+Windyship.Api/obj/Release/Windyship.Api.pdb
+Windyship/obj/Release/Windyship.Dal.csproj.FileListAbsolute.txt
+Windyship/obj/Release/Windyship.Dal.csprojResolveAssemblyReference.cache
+Windyship/obj/Release/Windyship.dll
+Windyship/obj/Release/Windyship.pdb
+Windyship/obj/Release/Windyship.Dal.csproj.FileListAbsolute.txt
+Windyship/obj/Release/Windyship.Dal.csprojResolveAssemblyReference.cache
+Windyship/obj/Release/Windyship.dll
+Windyship/obj/Release/Windyship.pdb
+Windyship/bin/Release/Windyship.dll
+Windyship/bin/Release/Windyship.pdb
+Windyship.Api/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
+Windyship.Api/obj/Release/DesignTimeResolveAssemblyReferencesInput.cache
+Windyship.Api/obj/Release/Package/PackageTmp/bin/Windyship.Api.dll
+Windyship.Api/obj/Release/Package/PackageTmp/bin/Windyship.dll
+Windyship.Api/obj/Release/Windyship.Api.csproj.FileListAbsolute.txt
+Windyship.Api/obj/Release/Windyship.Api.csprojResolveAssemblyReference.cache
+Windyship.Api/obj/Release/Windyship.Api.dll
+Windyship.Api/obj/Release/Windyship.Api.pdb
+Windyship.Api/Properties/PublishProfiles/FTP Deploy.pubxml.user
+Windyship/obj/Release/Windyship.Dal.csproj.FileListAbsolute.txt
+Windyship/obj/Release/Windyship.Dal.csprojResolveAssemblyReference.cache
+Windyship/obj/Release/Windyship.dll
+Windyship/obj/Release/Windyship.pdb
