--- a/Windyship.Api/Windyship.Api.csproj
+++ b/Windyship.Api/Windyship.Api.csproj
@@ -214,23 +214,28 @@
     <Compile Include="Model\Common\DateTestModel.cs" />
     <Compile Include="Model\Common\Distance.cs" />
     <Compile Include="Model\Common\LocationViewModel.cs" />
+    <Compile Include="Model\Common\PagedRequest.cs" />
     <Compile Include="Model\Common\SmallUserViewModel.cs" />
     <Compile Include="Model\Shipments\AcceptShipmentRequest.cs" />
     <Compile Include="Model\Shipments\CarriersForShipmentReqiest.cs" />
     <Compile Include="Model\Shipments\CarrierViewModel.cs" />
+    <Compile Include="Model\Shipments\CarryTravelRequest.cs" />
     <Compile Include="Model\Shipments\CarryTravelViewModel.cs" />
     <Compile Include="Model\Shipments\DeactivateTravelsRequest.cs" />
     <Compile Include="Model\Shipments\DeleteTravelRequest.cs" />
     <Compile Include="Model\Shipments\DeleteShipmentRequest.cs" />
     <Compile Include="Model\Shipments\DeliveredToCarrierRequest.cs" />
     <Compile Include="Model\Shipments\DeliveredToRecipientRequest.cs" />
+    <Compile Include="Model\Shipments\GetTravelsRequest.cs" />
     <Compile Include="Model\Shipments\GetUserRequest.cs" />
     <Compile Include="Model\Shipments\GetShipmentsRequest.cs" />
     <Compile Include="Model\Shipments\GetMyShipmentsRequest.cs" />
     <Compile Include="Model\Shipments\HireCarrierRequest.cs" />
     <Compile Include="Model\Shipments\InterestRequest.cs" />
+    <Compile Include="Model\Shipments\RejectHireRequest.cs" />
     <Compile Include="Model\Shipments\SetReviewRequest.cs" />
     <Compile Include="Model\Shipments\ShipmentRequest.cs" />
+    <Compile Include="Model\Shipments\ShipmentsRequest.cs" />
     <Compile Include="Model\Shipments\ShipmentViewModel.cs" />
     <Compile Include="Model\Account\UserMobileRequest.cs" />
     <Compile Include="Model\UserModels\AvatarUploadResponse.cs" />
@@ -245,7 +250,6 @@
     <Compile Include="Model\UserModels\Social\SocialTokenRequest.cs" />
     <Compile Include="Model\UserModels\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\AndroidGCMPushNotification.cs" />
     <Compile Include="Services\ConfigSvc\ConfigSectionName.cs" />
     <Compile Include="Services\ConfigSvc\ConfigService.cs" />
     <Compile Include="Services\IConfigService.cs" />
@@ -264,10 +268,12 @@
     <Compile Include="Services\IdentitySvc\Social\ISocialManager.cs" />
     <Compile Include="Services\IdentitySvc\Social\SocialUrls.cs" />
     <Compile Include="Services\IdentitySvc\TokenGenerator.cs" />
+    <Compile Include="Services\INotificationService.cs" />
     <Compile Include="Services\NotificationService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+    <Content Include="App_Data\aps_development.cer" />
     <None Include="Properties\PublishProfiles\FTP Deploy.pubxml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Ar.cshtml" />
@@ -279,10 +285,13 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
     <Folder Include="Views\Image\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Users\Administrator\Desktop\Moon-APNS-master\Moon-APNS-master\Application\MoonApns\MoonAPNS.csproj">
+      <Project>{a91e03ef-6532-4896-89c4-9fcec1d8d4db}</Project>
+      <Name>MoonAPNS</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Windyship\Windyship.Dal.csproj">
       <Project>{04e7730d-1357-4176-b307-591ab2f6af26}</Project>
       <Name>Windyship.Dal</Name>
